styles/Nav.module.scss
@import "./colors.module";

.contact {
  border-left: 1px solid $lines-color;
  padding: 1rem;
}

.hamburger {
  display: none;
}

.name {
  border-right: 1px solid $lines-color;
  padding: 1rem;
  width: 20vw;
  min-width: 15rem;
}

.nav {
  border-bottom: 1px solid $lines-color;
  display: flex;
}

.nav_menu {
  display: flex;
  justify-content: space-between;
  width: 80vw;
}

.list {
  display: flex;

  & > li {
    border-right: 1px solid $lines-color;
    padding: 1rem;
  }
}

.link {
  color: $secondary-color-grey;
  &:hover {
    color: $secondary-color-white;
  }
}

.current {
  border-bottom: 3px solid $accent-color-orange;
  & > * {
    color: $secondary-color-white;
  }
}

@media only screen and (max-width: 768px) {
  .nav_menu {
    background-color: $primary-color-two;
    flex-direction: column;
    position: fixed;
    right: -100%;
    top: 3.5rem;
    transition: 0.5s;
    width: 100%;
    &.active {
      right: 0;
    }
  }

  .link {
    color: $secondary-color-white;
  }

  .name {
    border: none;
  }

  .list {
    flex-direction: column;
    & > * {
      border-bottom: 1px solid $lines-color;
      border-left: 1px solid $lines-color;
    }
  }

  .contact {
    border-bottom: 1px solid $lines-color;
  }

  .nav {
    align-items: center;
    justify-content: space-between;
  }

  .hamburger {
    cursor: pointer;
    display: block;
    font-size: 24px;
    padding: 8.5px 1rem 0 0;
  }
}

